TestSuite/errors/err0099.pas
var i : integer;

begin
for i := 1 to 10 do
 for i := 2 to 9 do;
end.